--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     --small-border-radius: 4px;
     --large-border-radius: 6px;
     --cards-gap: 10px;
-    --border-color: rgba(136, 134, 134, .3);
+    --border-color: rgba(136, 134, 134, 0.2);
     --box-shadow-color: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
@@ -159,12 +159,12 @@ video {
 .portfolio-item {
     padding: 1rem;
     overflow: hidden;
+    border: 1px solid var(--border-color);
     border-radius: var(--large-border-radius);
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
 .portfolio-item:hover {
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
 
@@ -252,17 +252,15 @@ textarea:focus {
 .product-item {
     padding: 1rem;
     border-radius: var(--small-border-radius);
+    border: 1px solid var(--border-color);
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    background: rgba(255, 255, 255, 0.05);
-    box-shadow: var(--box-shadow-color);
     overflow: hidden;
 }
 
 .product-item:hover {
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+    box-shadow: var(--box-shadow-color);
 }
 
 .product-item img {
@@ -355,7 +353,6 @@ textarea:focus {
 
 .service-item {
     border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.08);
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -363,6 +360,7 @@ textarea:focus {
     align-items: center;
     gap: 1rem;
     padding: 1rem 0px;
+    border: 1px solid var(--border-color);
 }
 
 
